--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://i.ibb.co.com/9kQShDDt/Screenshot-2025-04-13-152223-modified.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sumon_Mia</title>
   </head>
